--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Poppins", system-ui, -apple-system, Segoe UI,
+  font-family: "Poppins", "Montserrat", system-ui, -apple-system, Segoe UI,
     Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
