--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 body {
-  font-family: "Poppins", "Montserrat", system-ui, -apple-system, Segoe UI,
+  font-family: "Be Vietnam Pro", system-ui, -apple-system, Segoe UI,
     Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
   color: var(--text);
   background: var(--bg);
@@ -28,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", "Montserrat", system-ui, -apple-system, Segoe UI,
+  font-family: "Be Vietnam Pro", system-ui, -apple-system, Segoe UI,
     Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
